--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</div>]]></javadoc.modules>
 		<!-- SonarQube -->
 		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
-		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.organization>ao-apps</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<!-- TODO: Implement tests -->
 		<sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
@@ -80,20 +80,20 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/aoindustries/semanticcms-theme-documentation.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-theme-documentation.git</developerConnection>
-		<url>https://github.com/aoindustries/semanticcms-theme-documentation</url>
+		<connection>scm:git:git://github.com/ao-apps/semanticcms-theme-documentation.git</connection>
+		<developerConnection>scm:git:git@github.com:ao-apps/semanticcms-theme-documentation.git</developerConnection>
+		<url>https://github.com/ao-apps/semanticcms-theme-documentation</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/aoindustries/semanticcms-theme-documentation/issues</url>
+		<url>https://github.com/ao-apps/semanticcms-theme-documentation/issues</url>
 	</issueManagement>
 
 	<ciManagement>
 		<system>GitHub Actions</system>
-		<url>https://github.com/aoindustries/semanticcms-theme-documentation/actions</url>
+		<url>https://github.com/ao-apps/semanticcms-theme-documentation/actions</url>
 	</ciManagement>
 
 	<repositories>
