--- a/book/pom.xml
+++ b/book/pom.xml
@@ -96,6 +96,9 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
 			<releases>
 				<enabled>false</enabled>
 			</releases>
+			<snapshots>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
