--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,9 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
 			<releases>
 				<enabled>false</enabled>
 			</releases>
+			<snapshots>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
